# dirby

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: directory_construction.rs  file_checks.rs  file_parse.rs  lib.rs  main.rs
